2009-07-07 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: merged smpp throttling branch that adds throughput handling
      without sleep for better ACK/DLR performance. Also changed:
      - added return codes to all sending and processing PDU functions
      - added extra error code when we receive malformed PDU
      - inlined smpp_msg_[create|destroy]
      - check validity against SMS_PARAM_UNDEFINED instead of hardcoded >= 0
      - added function to send generic NACK
      - check bind_xxx_resp for error 'already bound' and don't handle it as error
      - re-wrote io_thread function (this is the main loop) to take into accounts all
        possible conditions and throughput
      - implemented async shutdown sequence

2009-06-29 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_at.c: optimizing detection process on CME/CMS Errors (avoid to check
      if CMS when CME was detected). Renaming param value code -> errcode to make it
      more clean.
      Thanks to Vincent CHAVANIS <v.chavanis at telemaque.fr> for this patch.

2009-06-29 Alexander Malysh <amalysh at kannel.org>
    * gwlib/regex.c: fixed memory leak.
      Thanks to "Franck LAMASUTA" <f.lamasuta at cobratelematics.com> for patch.

2009-06-24  Stipe Tolj  <stolj at kannel.org>
    * acinclude.m4: fix unquoted definition warnings from bootstrap.sh run.
    * aclocal.m4: outcome of aclocal
    * configure[.in]: fix Fedora Core 11 (x86 and amd64) build for openssl
      detection. The static libssl.a library has been extracted from the
      openssl-devel package and is usually now not installed on a base system
      resulting in a failing build environment.

2009-06-23 Alexander Malysh <amalysh at kannel.org>
    * doc/userguide/userguide.xml, gw/smsc/smsc_http.c, gwlib/cfg.def: added 
      generic-foreign-id-regex config option that allows us to substract message
      id from body content by successful submission.